--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -1,1 +1,9 @@
 $text-primary: #0b0b0d;
+$text-muted: #9e9bb0;
+
+$light-primary: #fff;
+
+$theme-color: #6043c5;
+$theme-variant: #9087a9;
+$theme-light: #f5f3ff;
+$theme-bg: #0c022b;
