Main layout complete

--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -2,8 +2,14 @@ $text-primary: #0b0b0d;
 $text-muted: #9e9bb0;
 
 $light-primary: #fff;
+$grey-primary: #f2f2f2;
 
 $theme-color: #6043c5;
 $theme-variant: #9087a9;
 $theme-light: #f5f3ff;
 $theme-bg: #0c022b;
+$theme-link: #340ef1;
+$theme-contrast: #00d139;
+
+$content-padding-left: 60px;
+$content-padding-right: 65px;
