--- a/src/styles/partials/_scaffolding.scss
+++ b/src/styles/partials/_scaffolding.scss
@@ -10,8 +10,47 @@ html {
 
 body {
   margin: 0;
-  font: 14px/1.15 "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+  font: 12px/1.15 "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   color: $text-primary;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+img,
+iframe,
+video,
+object {
+  max-width: 100%;
+  height: auto;
+}
+
+img[alt] {
+  color: inherit;
+  line-height: 1.33;
+}
+
+// Placeholders and overflow
+// Smooth opacity transition on focus
+::placeholder {
+  text-overflow: ellipsis;
+  opacity: 1;
+  transition: opacity .3s ease;
+  color: inherit;
+}
+
+input:focus::placeholder {
+  opacity: .5;
+}
+
+button:not(:disabled):active {
+  transform: translateY(1px);
+}
+
+button:disabled {
+  cursor: not-allowed;
 }
